RESOLVED FIXED127753
[GTK] [CMake] Fix the build after r162835
https://bugs.webkit.org/show_bug.cgi?id=127753
Summary [GTK] [CMake] Fix the build after r162835
Martin Robinson
Reported 2014-01-27 18:47:30 PST
The build fails because the cmake port does not yet support the prefix header and some message.in files are still on the file list[
Attachments
Patch (5.74 KB, patch)
2014-01-27 18:50 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2014-01-27 18:50:17 PST
Martin Robinson
Comment 2 2014-01-29 11:46:45 PST
Comment on attachment 222394 [details] Patch Clearing flags on attachment: 222394 Committed r163032: <http://trac.webkit.org/changeset/163032>
Martin Robinson
Comment 3 2014-01-29 11:46:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.