[GTK] [CMake] Fix the build after r162835 https://bugs.webkit.org/show_bug.cgi?id=127753

Reviewed by Gustavo Noronha Silva.

* CMakeLists.txt: Add support for using the prefix header (GCC / clang only for now)
when WebKit2_USE_PREFIX_HEADER is set to true.
* PlatformGTK.cmake: Set WebKit2_USE_PREFIX_HEADER support and no longer process some message.in files.
* WebKit2Prefix.h: Add support for the CMake GTK+ build.

Canonical link: https://commits.webkit.org/145860@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163032 268f45cc-cd09-0410-ab3c-d52691b4dbfc