Source/WebKit2/WebKit2Prefix.h
@@ -24,9 +24,13 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#if defined (BUILDING_GTK__)
+#if defined(HAVE_CONFIG_H) && HAVE_CONFIG_H
+#ifdef BUILDING_WITH_CMAKE
+#include "cmakeconfig.h"
+#else
 #include "autotoolsconfig.h"
-#endif /* defined (BUILDING_GTK__) */
+#endif
+#endif
 
 #include <wtf/Platform.h>
 
